# robopotato

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  WHITEPAPER.md  audit.toml  demo.cast  demo.sh
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  errors.rs  main.rs
src/auth/: middleware.rs  token.rs
src/events/: bus.rs
src/routes/: agents.rs  mod.rs  state.rs  tokens.rs
src/state/: mod.rs  namespace.rs  persistence.rs  store.rs
tests/: compare.py  requirements.txt  robopotato_client.py  run.sh  test_adversarial.py  test_claude_code_agents.py  test_with_robopotato.py  test_without_robopotato.py
